update transaction schema
